deployment-service-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-2
  labels:
    app: my-app-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app-2
  template:
    metadata:
      labels:
        app: my-app-2
    spec:
      containers:
      - name: my-app-2
        image: thailuong/sample-node:service-2
        ports:
        - containerPort: 3000
