service-1.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
