service-2.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-service-2
spec:
  selector:
    app: my-app-2
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
