service.yml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
spec:
  # type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      # nodePort: 30800
